--- a/bad-stuff/demo/05-anchors/demos/Recipe Page-#2/index.html
+++ b/bad-stuff/demo/05-anchors/demos/Recipe Page-#2/index.html
@@ -88,6 +88,18 @@
     Bake in the oven for 20-25 minutes, stirring halfway through, until the quinoa becomes golden and crispy. Keep an eye on it to prevent burning.
     Once crispy, remove from the oven and let it cool.
 </ul>
+<ul>
+    ASSEMBLY
+
+    In a large salad bowl, combine chopped romaine lettuce, chopped kale, diced avocados, 
+    diced tomatoes, drained and rinsed black beans, thinly sliced red onion, roasted corn, 
+    and chopped fresh cilantro. Toss everything together until well mixed.
+    Once the quinoa has cooled, sprinkle it over the salad for a delightful crunch.
+    Drizzle the chipotle vinaigrette over the salad and toss to coat everything evenly.
+    Finish the salad by sprinkling crumbled cotija cheese on top.
+    Serve immediately and enjoy!
+    </ul>
+
        
 
 
