--- a/projects/Recipes/index.html
+++ b/projects/Recipes/index.html
@@ -141,8 +141,38 @@
                 Total Time: <b>30</b> mins
                 Cal/Serv: <b>442</b>
             </p>
-            
-        <h5>Ingredients</h5>           
+            <br></br> <br></br>
+        <h2>Ingredients</h2> 
+           <ul>
+                14 oz. potato and pea samosas (12 to 16 small)
+                2 medium yellow onions, sliced into 1/4-inch-thick wedges
+                4 Tbsp. olive oil, divided
+                Kosher salt
+                1/2  jalapeño, finely chopped
+                3 Tbsp. mango chutney
+                2 Tbsp. white wine vinegar
+                1 c. frozen peas, thawed
+                1 5-ounce container baby spinach
+                1/2 c. cilantro leaves, roughly chopped
+                1/3 c. mint leaves, roughly chopped
+           </ul>
+            <br></br> <br></br> 
+        <h3>Directions</h3>
+            <ol>
+                <b>Step 1</b>
+                Heat oven to 375°F. On rimmed baking sheet, bake samosas until golden brown and warmed through,
+                20 to 25 minutes (depending on brand). Transfer to cutting board and cut each into 3 pieces.
+                <b>Step 2</b>
+                Meanwhile, on separate rimmed baking sheet, toss onions with 2 tablespoons oil and 1/4 teaspoon 
+                each salt and pepper. Bake along with samosas 15 minutes. Toss onions with jalapeño and bake until 
+                onion is browned in spots, about 5 minutes more.
+                <b>Step 3</b>
+                Meanwhile, in small bowl, whisk together mango chutney, vinegar, and remaining 2 tablespoons oil.
+                <b>Step 4</b>
+                Toss onions with peas and spinach and bake until peas are warm and spinach begins to wilt, 1 to 2 
+                minutes. Toss with cilantro and mint and 1/4 teaspoon salt. Divide spinach salad among plates, top 
+                with samosas and drizzle with dressing. 
+            </ol>               
 
 
     </body>
