potluck fixed images

--- a/projects/html-potluck/index.html
+++ b/projects/html-potluck/index.html
@@ -14,9 +14,9 @@
             <b>JUMP TO RECIPE</b>      bookmarks<b>SAVE RECIPE</b>
         </p>
         <img 
-            src="shrimp and asparagus stirfry.jpg.avi"
+            src="images/shrimp-and-asparagus-stirfry.jpg.avif"
             width="150"
-            aly="shrimp and asparagus stirfry"
+            alt="shrimp and asparagus stirfry"
         >
         <p>
             Gochujang creates a quick flavor-packed sauce for 
@@ -75,9 +75,9 @@
                 <b>JUMP TO RECIPE</b>    bookmarks<b>SAVE RECIPE</b>
             </p>
             <img 
-                src="creamy-kale-pasta-.jpg.avif"
+                src="images/creamy-kale-pasta-.jpg.avif"
                 width="150"
-                aly="creamy kale pasta"
+                alt="creamy kale pasta"
             >
             <p>
                 For a super easy, nut-free take on pesto, we swapped in cottage cheese. It adds creaminess and
@@ -128,9 +128,9 @@
                 <b>JUMP TO RECIPE</b>  bookmarks <b>SAVE RECIPE</b>
             </p>
             <img 
-                src="samosa-salad.jpg.avif"
+                src="images/samosa-salad.jpg.avif"
                 width="150"
-                aly="samosa salad"
+                alt="samosa salad"
             >
             <p>
                 Skip the croutons and cut golden samosas into bite-size pieces for a delightfully fun and 
