finished wiki page

--- a/demos/04-images/index.html
+++ b/demos/04-images/index.html
@@ -7,14 +7,14 @@
     </head>
     <body>
         <img 
-            src="images/SunFlower#1.jpg"
+            src="images/SunFlower1.jpg"
             width="250"
             height="250"
             alt="sunflower#1 the greates"
             
         >
         <img
-            src="sunflower#2.jpg"
+            src="images/sunflower2.jpg"
             width="400"
             alt="an axolotl in the water"
         >
