--- a/demos/05-anchors/index.html
+++ b/demos/05-anchors/index.html
@@ -26,13 +26,13 @@
         <h6>TABLE OF CONTENTS</h6>
         <ul>
             <li>
-                <a herg="#section-1">Jumo to Section 1</a>
+                <a href="#section-1">Jumo to Section 1</a>
             </li>
             <li>
-                <a herg="#section-2">Jumo to Section 2</a>
+                <a href="#section-2">Jumo to Section 2</a>
             </li>
             <li>
-                <a herg="#section-3">Jumo to Section 3</a>
+                <a href="#section-3">Jumo to Section 3</a>
             </li>
          <ul>
          <h2 id="section-1">Welcome to Section 1!</h2>
