Recipe Page fixed with dirty code

--- a/demos/04-images/demos/wiki-page-1/index.html
+++ b/demos/04-images/demos/wiki-page-1/index.html
@@ -222,7 +222,11 @@
                 pp. 182–. ISBN 978-0-643-09064-4.
             </li>
          </p>
-            
+         <h6>External links</h6>
+         <p> 
+            Media related to Crown shyness at Wikimedia Commons
+         </p>
+            <li> Media related to Crown shyness at Wikimedia Commons</li>
          </ul>   
 
    
