--- a/exercises/color-palettes/index.html
+++ b/exercises/color-palettes/index.html
@@ -7,26 +7,26 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <h2 id="palettel-title"> my world</h2> 
-        <div id="palettel-color1">
+        <h2 id="palette1-title"> world</h2> 
+        <div id="palette1-color1">
             <h3>turquoise</h3>
             <h5>4ce0d2</h5>
         </div>
-        <div id="palettel-color2">
+        <div id="palette1-color2">
             <h3>light sea green</h3>
             <h5>22aaa1</h5>
         </div>
-        <div id="palettel-color3">
+        <div id="palette1-color3">
             <h3>pine green</h3>
             <h5>136f63</h5>
         </div>
         
-        <h2 id="palettel-title"> god world</h2> 
-        <div id="palettel-color2">
-            <h3>khaki</h3>
+        <h2 id="palette2-title"> god world</h2> 
+        <div id="palette2-color1">
+            <h3>Mount</h3>
             <h5>bcac9b</h5>
         </div>
-        <div id="palettel-color2">
+        <div id="palette2-color2">
             <h3>old rose</h3>
             <h5>c17c74</h5>
         </div>
@@ -36,7 +36,7 @@
         </div>
         
         <h2 id="palettel-title"> my world</h2> 
-        <div id="palettel-color1">
+        <div id="palette3-color1">
             <h3>turquoise</h3>
             <h5>4ce0d2</h5>
         </div>
