--- a/exercises/upside-down-tetris/index.html
+++ b/exercises/upside-down-tetris/index.html
@@ -18,7 +18,7 @@
                  <div class="teteris"></div>
                  <div class="teteris"></div>
                  <div class="teteris"></div>
-                 <div class="teteris"></div>
+                 <div class="teteris blue"></div>
                  <div class="teteris"></div>
                  <div class="teteris"></div>
                  <div class="teteris"></div>
