--- a/exercises/upside-down-tetris/index.html
+++ b/exercises/upside-down-tetris/index.html
@@ -13,37 +13,42 @@
             <div id="right-wall"></div>
             <div id="block-area">
                 <!-- ADD YOUR HTML CODE INSIDE OF THIS DIV-->
-                 <div class="teteris-block"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris blue"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris red"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris"></div>
-                 <div class="teteris"></div>
+                <div class="tetris-block"></div>
+                <div class="tetris-block teal"></div>
+                <div class="tetris-block"></div>
+                <div class="tetris-block"></div>
+                <div class="tetris-block"></div>
+                <div class="tetris-block blue"></div>
+                <div class="tetris-block"></div>
+                <div class="tetris-block"></div>
+                <div class="tetris-block"></div>
+                <div class="tetris-block pinkmagenta"></div>
+                <div class="tetris-block"></div>
+                <div class="tetris-block"></div>
+                <div class="tetris-block"></div>
+                <div class="tetris-block"></div>
+                <div class="tetris-block red"></div>
+                <div class="tetris-block"></div>
+                <div class="tetris-block"></div>
+                <div class="tetris-block"></div>
+                <div class="tetris-block orange"></div>
+                <div class="tetris-block"></div>
+                <div class="tetris-block"></div>
                 <!-- DON'T MODIFY ANYTHING PAST THIS POINT-->
             </div>
         </div>
         <div id="title">
             <h1>
-                <span class="c1">U</span><span class="c3">P</span><span class="c5">S</span><span class="c2">I</span><span class="c6">D</span><span class="c4">E</span>
+                <span class="c1">U</span><span class="c3">P</span>
+                <span class="c5">S</span><span class="c2">I</span>
+                <span class="c6">D</span><span class="c4">E</span>
                 <br>
-                <span class="c4">D</span><span class="c3">O</span><span class="c1">W</span><span class="c7">N</span>
+                <span class="c4">D</span><span class="c3">O</span>
+                <span class="c1">W</span><span class="c7">N</span>
                 <br>
-                <span class="c7">T</span><span class="c5">E</span><span class="c2">T</span><span class="c1">R</span><span class="c6">I</span><span class="c5">S</span>
+                <span class="c7">T</span><span class="c5">E</span>
+                <span class="c2">T</span><span class="c1">R</span>
+                <span class="c6">I</span><span class="c5">S</span>
             </h1>
         </div>
     </body>
