--- a/demos/11-single-column-layout/index.html
+++ b/demos/11-single-column-layout/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="light-container">
             <div class="single-column">
-                <hi>Single Coulumn Layout</h1>
+                <h1>Single Coulumn Layout</h1>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                         Saepe dignissimos perferendis sint, neque voluptatem quod 
