two column wiki with sidebar

--- a/exercises/Product Showcase Site Exercise/index.html
+++ b/exercises/Product Showcase Site Exercise/index.html
@@ -10,11 +10,42 @@
         <div class="light-container">
             <div class="single-column">
                 <img 
-                    src="images/lush-image-1.jpeg"
+                    src="images/lush-image.jpeg"
                     width="400"
                     height="260"
                     alt="lushi mage 1"
                 >
+                <p>
+                    The Little Pot That Does a Lot 💛 
+                </p>
+                
+            </div>
+        </div>
+        <div class="dark-container">
+            <div class="single-column">
+                <img 
+                    src="images/lush-image-2.jpeg"
+                    width="400"
+                    height="260"
+                    alt="lush mage 2"
+                >
+                <p> Body Scrubs</P>
+                </div>
+        </div>
+        <div class="light-container">
+            <div class="single-column">
+                <img 
+                    src="images/lush-image-3.jpeg"
+                    width="300"
+                    height="300"
+                    alt="lush mage 3"
+                >
+                <p>
+                    Treat your body to a little TLC with one of our gorgeous 
+                    handmade body lotions. Each one is a unique experience, 
+                    addressing different skin needs with fresh, nourishing 
+                    ingredients. No matter which one you choose, your skin will be soft, supple and beautifully scented.
+                </P>
             </div>
         </div>
     </body>
