wiki-with-sidebar2

--- a/exercises/wiki-with-sidebar/index.html
+++ b/exercises/wiki-with-sidebar/index.html
@@ -3,14 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>
-            Final Fantasy XIV</title>
+        <title>Final Fantasy XIV</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <div id="two-columns">
             <div id="sidebar-content">
-                <h2>BRAND MANE</h2>
+                <h2>content</h2>
                 <ul>
                     <li><a herf="#">Likn 1</a></li>
                     <li><a herf="#">Likn 2</a></li>
@@ -70,6 +69,26 @@
                 (2015), Stormblood (2017), Shadowbringers (2019), Endwalker 
                 (2021), and Dawntrail (2024).
             </p>
+            <h2>Gameplay</h2>
+            <ul></ul>
+            <p>
+                Final Fantasy XIV is an MMORPG, featuring a persistent world 
+                where players can interact with each other and the environment. 
+                Players create and customize their characters for use in the 
+                game, including name, race, gender, facial features, and 
+                starting class. Unlike in the original release, players may only 
+                choose to be a Disciple of War or Magic as a starting 
+                class—Disciples of the Hand and Land are initially unavailable.
+                [2] Players must also select a game server for each character. 
+                While all supported languages are available on every server, 
+                data centers are located in specific regions (i.e., North 
+                America, Europe, Japan, and Oceania) to reduce latency between 
+                client and server, and players are advised to choose a server in
+                their region.[3] Regardless of server or language, players can 
+                use a large library of automatically translated game terms and 
+                general phrases, allowing players who speak different languages 
+                to communicate.[4]
+            </P>
         </div>
     </body>
 </html>
