wiki-with-sidebar 3

--- a/exercises/wiki-with-sidebar/index.html
+++ b/exercises/wiki-with-sidebar/index.html
@@ -11,10 +11,10 @@
             <div id="sidebar-content">
                 <h2>content</h2>
                 <ul>
-                    <li><a herf="#">Likn 1</a></li>
-                    <li><a herf="#">Likn 2</a></li>
-                    <li><a herf="#">Likn 3</a></li>
-                    <li><a herf="#">Likn 4</a></li>
+                    <li><a herf="#">Gameplay</a></li>
+                    <li><a herf="#">Plot</a></li>
+                    <li><a herf="#">Development</a></li>
+                    <li><a herf="#">Reception</a></li>
                 </ul>     
             </div>
         <div id="main-content">
