blog-with-sidebar 1

--- a/exercises/wiki-with-sidebar/index.html
+++ b/exercises/wiki-with-sidebar/index.html
@@ -20,6 +20,7 @@
         <div id="main-content">
             <h1>
                 Final Fantasy XIV - Flex</h1>
+                <hr></hr>
             <p>
                 From Wikipedia, the free encyclopedia
             </p>
@@ -29,7 +30,7 @@
                 Fantasy XIV (2010 video game).
             </P>
             <p>
-                Final Fantasy XIV[c] is a massively multiplayer online 
+                <b>Final Fantasy XIV</b>[c] is a massively multiplayer online 
                 role-playing game (MMORPG) developed and published by Square 
                 Enix. Directed and produced by Naoki Yoshida and released 
                 worldwide for PlayStation 3 and Windows in August 2013, it 
@@ -70,8 +71,8 @@
                 (2021), and Dawntrail (2024).
             </p>
             <h2>Gameplay</h2>
-            <ul></ul>
-            <p>
+            <hr></hr>
+            <p> 
                 Final Fantasy XIV is an MMORPG, featuring a persistent world 
                 where players can interact with each other and the environment. 
                 Players create and customize their characters for use in the 
@@ -89,6 +90,73 @@
                 general phrases, allowing players who speak different languages 
                 to communicate.[4]
             </P>
+            <h3>Interface</h3>
+            <img 
+                src="images/FFXIV_ARR_PC_Interface.png"
+                alt="FFXIV ARR PC Interface"
+                width="300"
+            >
+            <p>
+                Final Fantasy XIV's PC beta version interface, navigated by a 
+                point and click widget system
+            </p>
+            <p>
+                PC and home console versions use a unified user interface (UI) 
+                and control scheme allowing for any combination of keyboard, 
+                mouse, and game controller. On PC, the game defaults to drag and 
+                drop menus, whereas on the console versions, the default 
+                interface resembles the PlayStation 3's XrossMediaBar.[5] This 
+                bar is used to access menus, maps, logs, and configuration 
+                options. The head-up display for both versions includes a 
+                message log, party status menu, mini-map, and action bar. The 
+                size and location of all UI elements may be customized.[6]
+            </p>
+            <img 
+                src="images/FFXIV_ARR_PS3_Interface.png"
+                alt="FFXIV ARR PS3 Interface"
+                width="300"
+            >
+            <p>
+                Final Fantasy XIV's home console interface, navigated by a 
+                cross-bar system
+            </p>
+            <p>
+                Actions and battle commands differ between PC and console 
+                versions. The PC versions support both point and click and 
+                keyboard input for commands or macros. Macro commands are 
+                customizable sequences of actions that allow players to execute 
+                desired abilities at a specific time. The home console versions 
+                instead map the action bar and macros to the "Cross Hotbar"—sets 
+                of four icons arranged in a cross shape. These are the grouped 
+                and accessed through a combination of the shoulder buttons and 
+                the directional pad or the face buttons. Using each shoulder 
+                button to cycle through the cross sets, players have quick 
+                access to commands. This interface is also available to PC 
+                players who use controllers.[5]
+            </p>
+            <h4>Character progression</h4>
+            <p>In addition to these player versus environment (PvE) challenges, 
+                various forms of player versus player (PvP) combat exist in 
+                Final Fantasy XIV. The Feast was an arena featuring structured 
+                four-versus-four battles where a player could register with up 
+                to three teammates to challenge another four-person team. This 
+                mode was removed in patch 6.1, when it was replaced with 
+                Crystalline Conflict,[11] which consists of two teams of five 
+                competing to seize control of and push a crystal which starts at 
+                the middle of the arena to each team's goal point. The second 
+                type, Frontlines, is a large battleground in which players form 
+                teams of up to 24 members. Teams are delineated by players' 
+                allegiance to one of three Grand Companies and the team which 
+                reaches the target number of points first wins the match. 
+                Multiple modes are available, each with differing locations and 
+                rulesets. Within the game, Frontlines is presented as an 
+                organized set of military exercises between the three nations 
+                with the ulterior goal of jockeying for dominance of regions 
+                rich in magical artifacts.[12] The third type, Rival Wings, is a 
+                battle arena mode where players manipulate minion waves and 
+                pilot mechs to destroy enemy objectives.
+
+            </p>
         </div>
     </body>
 </html>
