--- a/exercises/metube/index.html
+++ b/exercises/metube/index.html
@@ -7,14 +7,13 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        div id="grid-layout">
+        <div id="grid-layout">
             <div id="header">
                 <h1>
                     <a href="#">
                         <span id="me">Me</span><span id="tube">Tube</span></a>
                 </h1>
             </div>
-        </div>
             <div id="sidebar">
                 <ul>
                     <li><a href="#">HOME</a></li>
@@ -52,7 +51,7 @@
                             <span class="video-views">1.9K views</span>
                             &bull;
                             <span class="video-past">8 hourd ago</span>
-                        </div> div class="th"
+                        <div> div class="the"
                     </div>
                 </div>
                     <div class="metube-item">
