--- a/exercises/mebay-producr-page/index.html
+++ b/exercises/mebay-producr-page/index.html
@@ -13,7 +13,8 @@
                     <div id="header">
                         <h1>
                             <a href="#">
-                                <span id="me">Me</span><span id="tube">bay</span></a>
+                                <span id="me">Me</span><span id="tube">bay
+                                </span></a>
                         </h1>
                     </div>
                     <div id="sidebar">
@@ -26,8 +27,8 @@
             <div id="column-two">
                 <img
                     src="images/iRobot-Roomba.jpeg"
-                    width="250"
-                    height="250"
+                    width="450"
+                    height="450"
                     alt="iRobot Roomba"
                 >
                 <div id="main">
@@ -36,11 +37,11 @@
                         <h2><a href="#">iRobot Roomba i4 EVO (4150) Wi-Fi 
                             Connected Robot Vacuum - Certified Refurbished</a>
                         </h2>
-                        <div class="video-details">
-                            <div class="video-channel">Buy Direct.</div>
-                            <div class="views-and-post">
-                                <span class="video-views">Save Direct.</span>
-                                &bull;
+                        <div class="details">
+                            <div class="call-to-action1">Buy Direct.</div>
+                            <div class="call-to-action2">
+                                <span class="call-to-action3">Save Direct.
+                                &bull;</san>
                                 <span class="video-past">2-Year Warranty +FREE 
                                     Shipping</span>
                             </div> 
@@ -51,10 +52,16 @@
                 <h3>US $139.99</h3>
                 <p>
                     No Interest if paid in full in 6 mo on $99+ with 
-                    PayPal Credit*</p>
-                <p>Condition:<b> Certified - Refurbished</b></p>
-                
-
+                    PayPal Credit*
+                </p>
+                <p> Condition:<b>Certified - Refurbished</b></p>
+                <div> 
+                    <ul>
+                        <li><a href="#">Buy It Now</a></li>
+                        <li><a href="#">Add to cart</a></li>
+                        <li><a href="#">Add to watchlist</a><li>
+                    </ul>
+                </div>
             </div>                                   
         </div>
     </body>
