--- a/exercises/mebay-producr-page/index.html
+++ b/exercises/mebay-producr-page/index.html
@@ -7,48 +7,61 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div id="page-layout">
-            <div id="column-one">
-                <div id="grid-layout">
-                    <div id="header">
-                        <h1>
-                            <a href="#">
-                                <span id="me">Me</span><span id="tube">bay
-                                </span></a>
-                        </h1>
-                    </div>
-                    <div id="sidebar">
-                        <ul>
-                            <li><a href="#">Home & Garden </a></li>
-                            <li><a href="#">Household Supplies Cleaning</a></li>
-                            <li><a href="#">Vacuum Cleaners</a></li>
-                        </ul>
+        <div id="grid-layout">
+            <div id="column-one"> 
+                <img
+                    src="images/irobot.jpeg"
+                    width="75"
+                    height="75"
+                    alt="irobot"
+                >          
+                <img
+                    src="images/vac1.jpeg"
+                    width="75"
+                    height="75"
+                    alt="vac1"
+                >  
+                <img
+                    src="images/vac2.jpeg"
+                    width="75"
+                    height="75"
+                    alt="vac2"
+                >  
+                <img
+                    src="images/vac3.jpeg"
+                    width="75"
+                    height="75"
+                    alt="vac3"
+                >  
+                <img
+                    src="images/vac4.jpeg"
+                    width="75"
+                    height="75"
+                    alt="vac4"
+                >  
             </div>
             <div id="column-two">
                 <img
                     src="images/iRobot-Roomba.jpeg"
-                    width="450"
-                    height="450"
                     alt="iRobot Roomba"
-                >
-                <div id="main">
-                    <div class="metube-item">
-                        <div class="thumdnail-placeholder"></div>
-                        <h2><a href="#">iRobot Roomba i4 EVO (4150) Wi-Fi 
-                            Connected Robot Vacuum - Certified Refurbished</a>
-                        </h2>
-                        <div class="details">
-                            <div class="call-to-action1">Buy Direct.</div>
-                            <div class="call-to-action2">
-                                <span class="call-to-action3">Save Direct.
-                                &bull;</san>
-                                <span class="video-past">2-Year Warranty +FREE 
-                                    Shipping</span>
-                            </div> 
-                        </div>      
-                    </div>
-                </div>
+                >  
+            </div>
             <div id="column-three">
+                <div class="mebay-item">
+                    <div class="thumdnail-placeholder"></div>
+                    <h2><a href="#">iRobot Roomba i4 EVO (4150) Wi-Fi 
+                        Connected Robot Vacuum - Certified Refurbished</a>
+                    </h2>
+                    <div class="details">
+                        <div class="call-to-action1">Buy Direct.</div>
+                        <div class="call-to-action2">
+                            <span class="call-to-action3">Save Direct.
+                            &bull;</san>
+                            <span class="Warranty">2-Year Warranty +FREE 
+                                Shipping</span>
+                        </div> 
+                    </div>      
+                </div>
                 <h3>US $139.99</h3>
                 <p>
                     No Interest if paid in full in 6 mo on $99+ with 
