--- a/exercises/three-heros/index.html
+++ b/exercises/three-heros/index.html
@@ -7,6 +7,11 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        
+        <div id="hero-1">
+            <h1>Picture Perfect</h1>
+            <div class="spacer"></div>
+            <h2>Best Phoyographer in town</h2>
+            <a href="hero-2.html"></a>
+        </div>
     </body>
 </html>
