--- a/exercises/three-heros/index.html
+++ b/exercises/three-heros/index.html
@@ -12,6 +12,10 @@
             <div class="spacer"></div>
             <h2>Best Phoyographer in town</h2>
             <a href="hero-2.html"></a>
+        <img
+            src="images/cody-scott-milewski.jpg"
+            alt="cody scott milewski"
+        >
         </div>
     </body>
 </html>
