--- a/exercises/themed-gallery-page/index.html
+++ b/exercises/themed-gallery-page/index.html
@@ -3,10 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Lotus Flower</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <div div="layout">
+            <h1>Lotus Flower Gallery</h1>
+
+            <h3> Lotus Flower Gallery (grid)</h3>
+            <div class="Horzontal-masonry-gallery">
+                <img src="images/buddha-elemental-1-.jpg" alt="flower">
+                <img src="images/buddha-elemental-2-.jpg" alt="flower">
+                <img src="images/buddha-elemental-3-.jpg" alt="flower">
+                <img src="images/gayatri-malhotra-4-.jpg" alt="flower">
+                <img src="images/hydra-5-.jpg" alt="flower">
+                <img src="images/kevin-wang-6-.jpg" alt="flower">
+                <img src="images/natary-7-.jpg" alt="flower">
+                <img src="images/natary-8-.jpg" alt="flower">
+                <img src="images/thomas-oxford-9-.jpg" alt="flower">
+                <img src="images/ritz-10.jpg" alt="flower">
+                <img src="images/thomas-oxford-11-.jpg" alt="flower">
+                <img src="images/w-il-12.jpg" alt="flower">
+            </div>
+        </div>
     </body>
 </html>
