--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -14,6 +14,17 @@
 
             <h3>LaTonya's Gallery (grid)</h3>
             <div class="basic-grid-gallery">
+                <img src="images/Book.Cover.jpg" alt="book cover">
+                <img src="images/Character-Design.jpg" alt="Character Design">
+                <img src="images/Creative-Portrait.jpg" alt="Creative Portrait">
+                <img src="images/Matte-Painting.jpg" alt="Matte Painting">
+                <img src="images/National_Park_Poster.jpg" alt="National Park Poster">
+                <img src="images/Neural-Filters.jpg" alt="Neural Filters">
+                <img src="images/Photography-Collage.jpg" alt="Photography Collage">
+                <img src="images/Book.Cover.jpg" alt="book cover">
+                <img src="images/Book.Cover.jpg" alt="book cover">
+                <img src="images/Book.Cover.jpg" alt="book cover">
+                
             </div>
             <div class="spacer"></div>
         </div>
