--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -7,26 +7,48 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div div="layout">
+        <div id="layout">
             <div id="hero-1">
                 <h1>An up coming Graphic Designer</h1>
             </div>
 
-            <h3>LaTonya's Gallery (grid)</h3>
-            <div class="basic-grid-gallery">
-                <img src="images/Book.Cover.jpg" alt="book cover">
-                <img src="images/Character-Design.jpg" alt="Character Design">
-                <img src="images/Creative-Portrait.jpg" alt="Creative Portrait">
-                <img src="images/Matte-Painting.jpg" alt="Matte Painting">
-                <img src="images/National_Park_Poster.jpg" alt="National Park Poster">
-                <img src="images/Neural-Filters.jpg" alt="Neural Filters">
-                <img src="images/Photography-Collage.jpg" alt="Photography Collage">
-                <img src="images/Book.Cover.jpg" alt="book cover">
-                <img src="images/Book.Cover.jpg" alt="book cover">
-                <img src="images/Book.Cover.jpg" alt="book cover">
-                
+            <div id="hero-2">
+                <a href="#">REQUEST ASSISTANCE</a>
             </div>
-            <div class="spacer"></div>
+
+                <h3>Landscape Gallery (grid)</h3>
+                <div class="vertical-masonry-gallery">
+                    <img src="images/Book.Cover.jpg" alt="book cover">
+                    <img src="images/Creative-Portrait.jpg" alt="Character Design">
+                    <img src="images/Custom Logo-101.jpg" alt="Creative Portrait">
+                    <img src="images/Matte-Painting.jpg" alt="Matte Painting">
+                    <img src="images/National_Park_Poster.jpg" alt="National Park Poster">
+                    <img src="images/Neural-Filters.jpg" alt="Neural Filters">
+                    <img src="images/Photography-Collage.jpg" alt="Photography Collage">
+                    <img src="images/Portrait-Photography.jpg" alt="Portrait Photography.jpg">
+                    <img src="images/Product-Photography.jpg" alt="Product Photography.jpg">
+                 </div>
+               <div class="spacer"></div>
+            </div>
+        </div>
+        <div id="card-section">
+            <div class="single-column card-container">
+
+                <div class="card">
+                    <h3>Gallery Page</h3>
+                    <p>See in to my world</p>
+                </div>
+
+                <div class="card">
+                    <h3>Join the gallery community</h3>
+                    <p>Get the chance to shoe your work</p>
+                </div>
+
+                <div class="card">
+                    <h3>Get to know me</h3>
+                    <p>The story behind the madness .</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
