--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -13,10 +13,10 @@
             </div>
 
             <div id="hero-2">
-                <a href="#">REQUEST ASSISTANCE</a>
+                <a href="#">SUBSCRIB FOR UPDATES</a>
             </div>
 
-                <h3>Landscape Gallery (grid)</h3>
+                <h3>Mizlotus Landscape Gallery (grid)</h3>
                 <div class="vertical-masonry-gallery">
                     <img src="images/Book.Cover.jpg" alt="book cover">
                     <img src="images/Creative-Portrait.jpg" alt="Character Design">
@@ -38,12 +38,7 @@
                     <h3>Gallery Page</h3>
                     <p>See in to my world</p>
                 </div>
-
-                <div class="card">
-                    <h3>Join the gallery community</h3>
-                    <p>Get the chance to shoe your work</p>
-                </div>
-
+                
                 <div class="card">
                     <h3>Get to know me</h3>
                     <p>The story behind the madness .</p>
