--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -38,10 +38,10 @@
                     <h3>Gallery Page</h3>
                     <p>See in to my world</p>
                 </div>
-                
+
                 <div class="card">
                     <h3>Get to know me</h3>
-                    <p>The story behind the madness .</p>
+                    <p>The story behind the madness</p>
                 </div>
             </div>
         </div>
