--- a/exercises/client-navbars/index copy 2.html
+++ b/exercises/client-navbars/index copy 2.html
@@ -3,17 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sculptor's Haven</title>
+        <title>Document</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div id="laout">
-            <h1>Sculptor's Haven</h1>
-            <body>
-        <div id="navbar">
-            <a href="#">Gallery</a>
-            <a href="#">Contact</a>
-           
-        </div>
+        
     </body>
 </html>
