--- a/exercises/hover-galleries/index.html
+++ b/exercises/hover-galleries/index.html
@@ -30,13 +30,13 @@
                         creates a publication that champions science for 
                         everyone.
                     </p>
-                    <a href="#">LEARN MORE</a>
+                    <a href="#">READ MORE</a>
                 </div>
             </div> 
         </div>  
         <div id="hover-gallery2-card-container">
-            <img src="images/bluebird.jpg" alt="birds">
             <div class="gallery2-card">
+                <img src="images/bluebird.jpg" alt="birds">
                 <h2>Bluebirds</h2>
                 <div class="hover-gallery2-card-content">
                     <p>
@@ -53,6 +53,26 @@
                     <a href="#">LEARN MORE</a>
                 </div>
             </div> 
-        </div>    
+        </div> 
+        <div id="hover-gallery3-card-container">
+            <div class="gallery2-card">
+                <img src="images/bluebird.jpg" alt="birds">
+                <h3>Bluebirds</h3>
+                <div class="hover-gallery2-card-content">
+                    <p>
+                        Most of the country drives during an eastern North 
+                        American summer will turn up a few Eastern Bluebirds 
+                        sitting on telephone wires or perched atop a nest box, 
+                        calling out in a short, wavering voice or abruptly 
+                        dropping to the ground after an insect. Marvelous birds 
+                        to capture in your binoculars, male Eastern Bluebirds 
+                        are a brilliant royal blue on the back and head, and 
+                        warm red-brown on the breast. Blue tinges in the wings
+                         and tail give the grayer females an elegant look.
+                    </p>
+                    <a href="#">LEARN MORE</a>
+               </div>
+            </div>
+        </div>   
     </body>
 </html>
