--- a/projects/dropdown-menu-site/ak-and-boomer.html
+++ b/projects/dropdown-menu-site/ak-and-boomer.html
@@ -22,6 +22,11 @@
                 </div>
             </div>
         </div>
-        <div id="hero"><a href="Family-and-pet.jpg"></a></div>
+        <h2>ak and Boomer</h2>
+        <img
+            src="AK-and-Boomer.jpeg"
+            alt="AK and Boomer"
+        >
+        <p></p>
     </body>
 </html>
