--- a/projects/dropdown-menu-site/ak-and-boomer.html
+++ b/projects/dropdown-menu-site/ak-and-boomer.html
@@ -17,16 +17,23 @@
                 <a href="#">Adopt  <i class="fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
                     <a href="ak-and-boomer.html">AK and Bommer</a>
-                    <a href="tiff.html">Tiff</a>
+                    <a href="paco.html">Tiff</a>
                     <a href="tammy.html">Tammy</a>
                 </div>
             </div>
         </div>
-        <h2>ak and Boomer</h2>
-        <img
-            src="AK-and-Boomer.jpeg"
-            alt="AK and Boomer"
-        >
-        <p></p>
+            <div class="center-column">
+                <h2>AK and Boomer</h2>
+                <img
+                    src="images/AK-and-Boomer.jpeg"
+                    width="450"
+                    alt="cute puppys"
+                >
+                <p>
+                    LOOK , it's mans bestfriends. 
+                    You can't buy love, but you 
+                    can get loyalty.
+                </p>
+            </div>
     </body>
 </html>
