--- a/projects/dropdown-menu-site/paco.html
+++ b/projects/dropdown-menu-site/paco.html
@@ -17,10 +17,22 @@
                 <a href="#">Adopt  <i class="fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
                     <a href="ak-and-boomer.html">AK and Bommer</a>
-                    <a href="tiff.html">Tiff</a>
+                    <a href="paco.html">Big boy</a>
                     <a href="tammy.html">Tammy</a>
                 </div>
             </div>
+        </div>
+        <div class="center-column">
+            <h2>Paco</h2>
+            <img
+                src="images/paco.jpg"
+                width="450"
+                alt="cute puppys"
+            >
+            <p>
+                Adopting a puppy it just as exciting and joyful as have a 
+                newborn babby. 
+            </p>
         </div>
     </body>
 </html>
