--- a/projects/dropdown-menu-site/tammy.html
+++ b/projects/dropdown-menu-site/tammy.html
@@ -22,5 +22,19 @@
                 </div>
             </div>
         </div>
+        <div class="center-column">
+            <h2>Tammy</h2>
+            <img
+                src="images/tammy.jpg"
+                width="450"
+                alt="cute puppys"
+            >
+            <p>
+                This little piggy don't belong in a market. 
+                This little piggy just want's a new home.
+                This littel piggy will have you laughting ( hahaha) all the 
+                way home. 
+            </p>
+        </div>
     </body>
 </html>
