--- a/exercises/client-navbars/index.html
+++ b/exercises/client-navbars/index.html
@@ -7,13 +7,11 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div id="laout">
-            <h1>Sculptor's Haven</h1>
-            <body>
+        <div id="layout">
         <div id="navbar">
+            <h1>Sculptor's Haven</h1>
             <a href="#">Gallery</a>
             <a href="#">Contact</a>
-           
         </div>
     </body>
 </html>
