--- a/exercises/client-navbars/angelears.html
+++ b/exercises/client-navbars/angelears.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="laout">
-            <div id="navbar">
+            <div id="navbar" class="angelears">
                 <h1>AngelEars</h1>
                 <a href="#">News <i class="fa-solid fa-chevron-down"></i></a>
                 <a href="#">Editorials</a>
