--- a/projects/dropdown-menu-site/index.html
+++ b/projects/dropdown-menu-site/index.html
@@ -17,7 +17,7 @@
                 <a href="#">Adopt  <i class="fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
                     <a href="ak-and-boomer.html">AK and Bommer</a>
-                    <a href="paco.html">Tiff</a>
+                    <a href="paco.html">Paco</a>
                     <a href="tammy.html">Tammy</a>
                 </div>
             </div>
