--- a/projects/dropdown-menu-site/paco.html
+++ b/projects/dropdown-menu-site/paco.html
@@ -17,7 +17,7 @@
                 <a href="#">Adopt  <i class="fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
                     <a href="ak-and-boomer.html">AK and Bommer</a>
-                    <a href="paco.html">Big boy</a>
+                    <a href="paco.html">Paco</a>
                     <a href="tammy.html">Tammy</a>
                 </div>
             </div>
@@ -30,7 +30,7 @@
                 alt="cute puppys"
             >
             <p>
-                Adopting a puppy it just as exciting and joyful as have a 
+                Adopting a puppy is just as exciting and joyful as have a 
                 newborn babby. 
             </p>
         </div>
