--- a/projects/dropdown-menu-site/ak-and-boomer.html
+++ b/projects/dropdown-menu-site/ak-and-boomer.html
@@ -17,7 +17,7 @@
                 <a href="#">Adopt  <i class="fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
                     <a href="ak-and-boomer.html">AK and Bommer</a>
-                    <a href="paco.html">Tiff</a>
+                    <a href="paco.html">Paco</a>
                     <a href="tammy.html">Tammy</a>
                 </div>
             </div>
@@ -30,7 +30,7 @@
                     alt="cute puppys"
                 >
                 <p>
-                    LOOK , it's mans bestfriends. 
+                    LOOK , it is mans bestfriends. 
                     You can't buy love, but you 
                     can get loyalty.
                 </p>
