--- a/projects/dropdown-menu-site/tammy.html
+++ b/projects/dropdown-menu-site/tammy.html
@@ -17,7 +17,7 @@
                 <a href="#">Adopt  <i class="fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
                     <a href="ak-and-boomer.html">AK and Bommer</a>
-                    <a href="tiff.html">Tiff</a>
+                    <a href="paco.html">Paco</a>
                     <a href="tammy.html">Tammy</a>
                 </div>
             </div>
@@ -32,7 +32,7 @@
             <p>
                 This little piggy don't belong in a market. 
                 This little piggy just want's a new home.
-                This littel piggy will have you laughting ( hahaha) all the 
+                This little piggy will have you laughting ( hahaha) all the 
                 way home. 
             </p>
         </div>
