--- a/projects/restaurant/index.html
+++ b/projects/restaurant/index.html
@@ -3,10 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Restauran</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        
+        <div id="navbar">
+            <a id="logo" href="index.html">Wrap It Up</a>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+
+            <div class="dropdown-container">
+                
+                <a href="#">Menu <i class="fa-solid fa-chevron-down"></i></a>
+                <div class="dropdown-menu">
+                    <a href="ak-and-boomer.html">AK and Bommer</a>
+                    <a href="paco.html">Paco</a>
+                    <a href="tammy.html">Tammy</a>
+                </div>
+            </div>
+        </div>
+        <div id="hero"><a href="Family-and-pet.jpg"></a></div>
     </body>
 </html>
