--- a/projects/restaurant/index.html
+++ b/projects/restaurant/index.html
@@ -16,9 +16,9 @@
                 
                 <a href="#">Menu <i class="fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
-                    <a href="ak-and-boomer.html">AK and Bommer</a>
-                    <a href="paco.html">Paco</a>
-                    <a href="tammy.html">Tammy</a>
+                    <a href="Vegan-breakast.html">Breakfast</a>
+                    <a href="luch.html">Luch</a>
+                    <a href="dinner.html">Dinner</a>
                 </div>
             </div>
         </div>
