--- a/projects/restaurant/index.html
+++ b/projects/restaurant/index.html
@@ -16,7 +16,7 @@
                 
                 <a href="#">Menu <i class="fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-menu">
-                    <a href="Vegan-breakast.html">Breakfast</a>
+                    <a href="vegan-breakast.html">Breakfast</a>
                     <a href="luch.html">Luch</a>
                     <a href="dinner.html">Dinner</a>
                 </div>
