--- a/projects/restaurant/drinks.html
+++ b/projects/restaurant/drinks.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Restauran</title>
+        <title>Document</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
@@ -24,6 +24,5 @@
             </div>
             <a href="#" class="cta-buttom">Sign up</a>
         </div>
-        <div id="hero"><a href="ryan-concepcion.jpg"></a></div>
     </body>
 </html>
