--- a/projects/restaurant/vegan-food.html
+++ b/projects/restaurant/vegan-food.html
@@ -24,10 +24,10 @@
             </div>
             <a href="#" class="cta-buttom">Sign up</a>
         </div>
-        <div id="two-columns">
+        <div id="the-big-waffle">
             <div id="column-1">
                 <div class="sticky-sidebar">
-                    <h2>Primary Links</h2>
+                    <h2>Menu</h2>
                     <ul>
                         <li><a href="#">Berry Pancakes: $10.95</a></li>
                         <li><a href="#">Salmon Sandwich; $5.49</a></li>
@@ -41,10 +41,16 @@
                     </ul>
                 </div>
             </div>
-        </div>
-        <div id="column-2">
-            <div id="main-content">
-                <h1>two-columns - Sidebars (grid)</h1>
+            <div id="column-2">
+                <div id="main-content">
+                    <h1>two-columns - Sidebars (grid)</h1>
+                    <img 
+                        src="images/nabil-boukala.jpg" 
+                        alt="nature"
+                    >
+                    
+                </div>
             </div>
+        </div>
     </body>
 </html>
